--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,28 +1,3 @@
-# Server Configuration
-PORT=3001
-NODE_ENV=development
-BASE_URL=http://localhost:3001
-
-# Database
-DATABASE_URL=postgresql://username:password@localhost:5432/rentchain
-
-# Blockchain
-WEB3_RPC_URL=https://sepolia.infura.io/v3/your-infura-key
-CONTRACT_ADDRESS=0xYourContractAddress
-
-# M-Pesa Configuration
-MPESA_CONSUMER_KEY=your_consumer_key
-MPESA_CONSUMER_SECRET=your_consumer_secret
-MPESA_SHORTCODE=your_shortcode
-MPESA_PASSKEY=your_passkey
-
-# Security
-JWT_SECRET=your_jwt_secret_key_here
-WEBHOOK_SECRET=your_webhook_secret
-
-# Frontend
-FRONTEND_URL=http://localhost:3000
-
 # =============================================
 # RentChain Backend Environment Configuration
 # =============================================
@@ -40,9 +15,9 @@ DB_IDLE_TIMEOUT=30000
 DB_CONNECTION_TIMEOUT=2000
 
 # Blockchain Configuration
-WEB3_RPC_URL=https://sepolia.infura.io/v3/your-infura-project-id
+WEB3_RPC_URL=https://sepolia-rpc.scroll.io
 CONTRACT_ADDRESS=0x742E4C3B6B6c5d8f8e8f9f0a1b2c3d4e5f6a7b8c
-CHAIN_ID=11155111
+CHAIN_ID=534351
 
 # M-Pesa Configuration (Sandbox)
 MPESA_CONSUMER_KEY=your_consumer_key_here
