--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,7 +9,7 @@ BASE_URL=http://localhost:3001
 FRONTEND_URL=http://localhost:3000
 
 # Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/rentchain
+DATABASE_URL=postgresql://username:password@localhost:5432/zurirent
 DB_MAX_CONNECTIONS=20
 DB_IDLE_TIMEOUT=30000
 DB_CONNECTION_TIMEOUT=2000
