--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -12,7 +12,7 @@ VITE_CONTRACT_ADDRESS_RENTAL_AGREEMENT=0x...
 VITE_CONTRACT_ADDRESS_PROPERTY_REGISTRY=0x...
 
 # API Configuration
-VITE_API_BASE_URL=https://api.rentchain.xyz
+VITE_API_BASE_URL=https://api.zurirent.xyz
 VITE_IPFS_GATEWAY=https://ipfs.io/ipfs
 
 # Third-party Services
