--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,7 @@
     "lint:security": "eslint . --config .eslintrc.security.js",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "type-check": "tsc --noEmit",
-    "prepare": "husky install"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "react": "^18.2.0",
