--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env and update with your actual values
 
 # App Configuration
-VITE_APP_NAME="RentChain"
+VITE_APP_NAME="ZuriRent"
 VITE_APP_VERSION=1.0.0
 VITE_APP_ENV=development
 
