--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -77,7 +77,7 @@ http {
 
     # API proxy (if needed)
     location /api/ {
-        proxy_pass https://api.rentchain.xyz;
+        proxy_pass https://api.zurirent.xyz;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
