--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,24 +6,35 @@ VITE_APP_NAME="ZuriRent"
 VITE_APP_VERSION=1.0.0
 VITE_APP_ENV=development
 
-# Blockchain Configuration
+# Network Configuration
+VITE_NETWORK=SCROLL_SEPOLIA
 VITE_SCROLL_RPC_URL=https://sepolia-rpc.scroll.io
-VITE_CONTRACT_ADDRESS_RENTAL_AGREEMENT=0x...
-VITE_CONTRACT_ADDRESS_PROPERTY_REGISTRY=0x...
 
-# API Configuration
-VITE_API_BASE_URL=https://api.zurirent.xyz
+# Smart Contract Addresses (Update after deployment)
+# Get these from: contracts/deployments/scrollSepolia.json
+VITE_CONTRACT_ADDRESS_MAIN=0x...
+VITE_CONTRACT_ADDRESS_PROPERTY_REGISTRY=0x...
+VITE_CONTRACT_ADDRESS_RENT_AGREEMENT=0x...
+VITE_CONTRACT_ADDRESS_ESCROW=0x...
+VITE_CONTRACT_ADDRESS_PAYMENT=0x...
+VITE_CONTRACT_ADDRESS_USER_REGISTRY=0x...
+VITE_CONTRACT_ADDRESS_DISPUTE=0x...
+VITE_CONTRACT_ADDRESS_REVIEW=0x...
+VITE_CONTRACT_ADDRESS_TOKEN=0x...
+
+# API Configuration (Optional - Backend)
+VITE_API_BASE_URL=http://localhost:3001
 VITE_IPFS_GATEWAY=https://ipfs.io/ipfs
 
-# Third-party Services
-VITE_ANALYTICS_ID=your-analytics-id
-VITE_SENTRY_DSN=your-sentry-dsn
-VITE_ALCHEMY_API_KEY=your-alchemy-key
+# Third-party Services (Optional)
+VITE_ANALYTICS_ID=
+VITE_SENTRY_DSN=
+VITE_ALCHEMY_API_KEY=
 
 # Feature Flags
-VITE_ENABLE_ANALYTICS=true
+VITE_ENABLE_ANALYTICS=false
 VITE_ENABLE_PWA=true
 VITE_ENABLE_OFFLINE=true
 
 # Security
-VITE_CSRF_SECRET=your-csrf-secret
+VITE_CSRF_SECRET=your-csrf-secret-here
